packages/vue/src/components/containments/elm-tabs.module.css
.elm-tabs {
  margin-block-start: var(--elmethis-margin-block-start);
  display: flex;
  flex-direction: column;
  gap: 0;
  width: 100%;
  border: solid 1px oklch(from var(--elmethis-color-primary) l c h / 10%);
  border-radius: 0.25rem;
  box-shadow: 0 0 0.125rem var(--elmethis-box-shadow-color);
  overflow: hidden;
  background-color: var(--elmethis-color-surface-raised);
}

.tab-container {
  display: flex;
  flex-direction: row;
  border-bottom: solid 1px oklch(from var(--elmethis-color-primary) l c h / 30%);
}

.tab {
  box-sizing: border-box;
  min-width: 6rem;
  padding: 1rem;
  margin: 0;
  cursor: pointer;
  border-right: dashed 1px oklch(from var(--elmethis-color-primary) l c h / 20%);
  border-bottom: solid 2px transparent;
  display: flex;
  align-items: center;
  justify-content: center;
  transition:
    background-color 200ms,
    border-color 200ms;
  color: var(--elmethis-scoped-color, var(--elmethis-color-neutral));
  user-select: none;

  &.active {
    background-color: oklch(from var(--elmethis-color-primary) l c h / 5%);
    border-bottom-color: var(--elmethis-color-primary);
    cursor: default;
  }

  &:hover {
    background-color: oklch(from var(--elmethis-color-primary) l c h / 5%);
  }
}

.tab-content {
  width: 100%;
  margin: 0;
}

.tab-content-inner {
  box-sizing: border-box;
  padding: 1em;
}

